--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,11 +9,12 @@ env:
   IMAGE_TAG: 1.0
 
 jobs:
-  build:
+  build-test-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -32,3 +33,32 @@ jobs:
       run: |
         uv run python manage.py check
         uv run python manage.py makemigrations --check --dry-run
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} web
+
+    - name: Push Docker image
+      run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v4
+      with:
+        version: "v1.29.0"
+
+    - name: Configure kubeconfig
+      run: |
+        echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
+        export KUBECONFIG=$PWD/kubeconfig
+        kubectl get nodes
+
+    - name: Deploy to Kubernetes
+      run: |
+        kubectl set image deployment/web-deployment \
+          web=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+        kubectl rollout status deployment/web-deployment
