--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,19 +46,13 @@ jobs:
     - name: Push Docker image
       run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
-    - name: Set up kubectl
-      uses: azure/setup-kubectl@v4
+    - name: Setup Minikube
+      uses: manusa/actions-setup-minikube@v2.5.0
       with:
-        version: "v1.29.0"
-
-    - name: Configure kubeconfig
-      run: |
-        echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
-        export KUBECONFIG=$PWD/kubeconfig
-        kubectl get nodes
+        minikube version: '1.30.1'
+        kubernetes version: '1.28.0'
 
     - name: Deploy to Kubernetes
       run: |
-        kubectl set image deployment/web-deployment \
-          web=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-        kubectl rollout status deployment/web-deployment
+        kubectl apply -f k9s/apps/web.yaml
+        kubectl get pods
