--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,23 @@ env:
 jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: myuser
+          POSTGRES_PASSWORD: mypassword
+          POSTGRES_DB: mydb
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U myuser"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      DATABASE_URL: postgres://myuser:mypassword@localhost:5432/mydb
 
     steps:
     - name: Checkout code
@@ -46,13 +63,4 @@ jobs:
     - name: Push Docker image
       run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
-    - name: Setup Minikube
-      uses: manusa/actions-setup-minikube@v2.5.0
-      with:
-        minikube version: '1.30.1'
-        kubernetes version: '1.28.0'
-
-    - name: Deploy to Kubernetes
-      run: |
-        kubectl apply -f k9s/apps/web.yaml
-        kubectl get pods
+    
